react crud example

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Byorns - React Tutorial Example">
+  <meta name="description" content="Byorns - React CRUD Example with Router and Bootstrap">
 
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
