--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/byorns.css" />
 
-  <title>Byorn's First React Sample</title>
+  <title>Byorn's CRUD React Example</title>
 </head>
 
 <body class="page-background">
@@ -36,8 +36,8 @@
 
       <!-- Main Content -->
       <div class="col-md-9 col-lg-9">
-        <h2> React JS - Tutorial Sample </h2>
-        <p>The below demo is a demonstration of the official ReactJS Tutorial.</p>
+        <h2>React CRUD Example</h2>
+        <p>The below demo uses Router and Bootstrap. Download from GitHub <a href="https://github.com/byorn/react-crud-example">here</a></p>
         <div id="root"></div>
       </div>
 
