--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/byorns.css" />
 
-  <title>Byorn's CRUD React Example</title>
+  <title>Byorn's Menu And Search Table Example</title>
 </head>
 
 <body class="page-background">
@@ -30,30 +30,21 @@
     </div>
 
 
-    <!--Content -->
-    <div class="row content">
 
-
-      <!-- Main Content -->
-      <div class="col-md-9 col-lg-9">
-        <h2>React CRUD Example</h2>
-        <p>The below demo uses Router and Bootstrap. Download from GitHub <a href="https://github.com/byorn/react-crud-example">here</a></p>
-        <div id="root"></div>
-      </div>
-
-      <!-- My Info -->
-      <div class="col-md-3 col-lg-3 myinfo text-center">
-
-        <img alt="byorn" src="%PUBLIC_URL%/byorn.png" class="img-responsive myimage " />
-        <h4>My name is Byorn <br/>
-                            I am a Full Stack Java Developer.<br/>
-                            I maintain a technical <a href="http://byorns.blogspot.com">  blog</a> <br/>
-                            and share my code in <a href="https://github.com/byorn">git hub</a>
-                        </h4>
-
-
-      </div>
+    <div class="row">
+        <h2 class="margin-left-15">React JS - Simple Table Search with a Side Menu</h2><hr/>
     </div>
+
+   <div class="row">
+     <div class="col-md-10 col-lg-10">
+     <div id="root" ></div>
+     </div>
+   </div>
+
+
+   <div class="row">
+     <div class="more-verticle-space" ></div>
+   </div>
 
 
 
